--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,10 @@ jobs:
       - name: Set up Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker.io
+          # Remove conflicting containerd package, if it exists
+          sudo apt-get remove -y containerd
+          # Install Docker with no recommended packages to avoid conflicts
+          sudo apt-get install -y --no-install-recommends docker.io
           sudo systemctl start docker
           sudo systemctl enable docker
 
