--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,13 @@ jobs:
           docker-compose build
           docker-compose push
 
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan 35.223.205.182 >> ~/.ssh/known_hosts
+          
       - name: Deploy to server
         run: |
           ssh sasansabour@35.223.205.182 "docker-compose down && docker-compose up -d"
